<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.educ.ahmed.educationaljavaquiz.MainActivity"
    android:background="#451B66">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:text="@string/java_quiz"
            android:textAllCaps="true"
            android:textColor="#a5f00E"
            android:textSize="34sp"
            android:textStyle="italic"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:text="@string/quiz_1"
            android:textColor="#a5f00E"
            android:textSize="24sp"
            android:textStyle="italic"

            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <RadioButton
                android:id="@+id/quiz_1_answer_1_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:onClick="quiz1OnClickedRadioButton"
                android:text="@string/quiz_1_answer_1"
                android:textColor="#ffff0f"
                android:textSize="16sp"

                />

            <RadioButton
                android:id="@+id/quiz_1_answer_2_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quiz1OnClickedRadioButton"
                android:text="@string/quiz_1_answer_2"
                android:textColor="#ffff0f"
                android:textSize="16sp"

                />

            <RadioButton
                android:id="@+id/quiz_1_answer_3_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quiz1OnClickedRadioButton"
                android:text="@string/quiz_1_answer_3"
                android:textColor="#ffff0f"
                android:textSize="16sp"

                />

            <RadioButton
                android:id="@+id/quiz_1_answer_4_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quiz1OnClickedRadioButton"
                android:text="@string/quiz_1_answer_4"
                android:textColor="#ffff0f"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:text="@string/quiz_2"
            android:textColor="#a5f00E"
            android:textSize="24sp"
            android:textStyle="italic"

            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <RadioButton
                android:id="@+id/quiz_2_answer_1_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quiz2OnClickedRadioButton"
                android:text="@string/quiz_2_answer_1"
                android:textColor="#ffff0f"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/quiz_2_answer_2_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quiz2OnClickedRadioButton"
                android:text="@string/quiz_2_answer_2"
                android:textColor="#ffff0f"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:text="@string/quiz_3"
            android:textColor="#a5f00E"
            android:textSize="24sp"
            android:textStyle="italic"

            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <RadioButton
                android:id="@+id/quiz_3_answer_1_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quiz3OnClickedRadioButton"
                android:text="@string/quiz_3_answer_1"
                android:textColor="#ffff0f"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/quiz_3_answer_2_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quiz3OnClickedRadioButton"
                android:text="@string/quiz_3_answer_2"
                android:textColor="#ffff0f"
                android:textSize="16sp" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:text="@string/quiz_4"
            android:textColor="#a5f00E"
            android:textSize="24sp"
            android:textStyle="italic"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <CheckBox
                android:id="@+id/quiz_4_answer_1_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="quiz4OnClickedCheckBox"
                android:text="@string/quiz_4_answer_1"
                android:textColor="#ffff0f"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/quiz_4_answer_2_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="quiz4OnClickedCheckBox"
                android:text="@string/quiz_4_answer_2"
                android:textColor="#ffff0f"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/quiz_4_answer_3_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="quiz4OnClickedCheckBox"
                android:text="@string/quiz_4_answer_3"
                android:textColor="#ffff0f"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/quiz_4_answer_4_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:onClick="quiz4OnClickedCheckBox"
                android:text="@string/quiz_4_answer_4"
                android:textColor="#ffff0f"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:text="@string/quiz_5"
            android:textColor="#a5f00E"
            android:textSize="24sp"
            android:textStyle="italic"
            android:paddingTop="24dp"

            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <RadioButton
                android:id="@+id/quiz_5_answer_1_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:onClick="quiz5OnClickedRadioButton"
                android:text="@string/quiz_5_answer_1"
                android:textColor="#ffff0f"
                android:textSize="16sp"

                />

            <RadioButton
                android:id="@+id/quiz_5_answer_2_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="quiz5OnClickedRadioButton"
                android:text="@string/quiz_5_answer_2"
                android:textColor="#ffff0f"
                android:textSize="16sp"

                />

            <RadioButton
                android:id="@+id/quiz_5_answer_3_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:onClick="quiz5OnClickedRadioButton"
                android:text="@string/quiz_5_answer_3"
                android:textColor="#ffff0f"
                android:textSize="16sp"

                />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="28sp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="#ffff0f"
            android:onClick="submitButton"
            android:elevation="6dp"



            />


    </LinearLayout>


</ScrollView>
